--- a/packages/frameworks-fastify/package.json
+++ b/packages/frameworks-fastify/package.json
@@ -38,7 +38,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@auth/core": "workspace:*",
+    "@auth/core": "^0.37.3",
     "@fastify/formbody": "^8.0.1"
   },
   "devDependencies": {
